--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
 
 .quiz-container {
     background-color: whitesmoke;
+    border-color: blueviolet;
+    border-style: solid;
     width: 800px;
     max-width: 80%;
     padding:10px;
@@ -37,4 +39,5 @@ h2 {
     justify-content: space-evenly;
     
 }
+
 
